# placeholder

./: README.md  main.py  pyproject.toml
core/: animator.py  bindings.py  constants.py  player_data.py  types.py
entities/: player.py
states/: __init__.py  game.py
states/meta/: base.py  base_state.py  loader.py
